# darkstrata-sdks

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  release.config.js
.github/workflows/: csharp-ci.yml  csharp-publish.yml  go-ci.yml  java-ci.yml  java-publish.yml  node-ci.yml  node-publish.yml  python-ci.yml  python-publish.yml  release.yml  rust-ci.yml  rust-publish.yml  splunk-ta-ci.yml  splunk-ta-release.yml
csharp/: CHANGELOG.md  README.md
csharp/examples/BasicUsage/: BasicUsage.csproj
csharp/src/DarkStrata.CredentialCheck/: Constants.cs  DarkStrata.CredentialCheck.csproj  DarkStrataCredentialCheck.cs
csharp/src/DarkStrata.CredentialCheck/Compatibility/: RequiredMemberAttribute.cs
csharp/tests/DarkStrata.CredentialCheck.Tests/: ClientTests.cs  CryptoTests.cs  DarkStrata.CredentialCheck.Tests.csproj
go/: CHANGELOG.md  README.md  client_test.go  crypto.go  crypto_test.go  errors.go  go.mod  types.go
go/examples/basic-usage/: main.go
go/examples/batch-check/: main.go
go/examples/error-handling/: main.go
integrations/splunk-ta/: .gitignore  CHANGELOG.md  README.md  app.manifest  globalConfig.json  package.json  pyproject.toml
integrations/splunk-ta/package/: app.manifest
integrations/splunk-ta/soar/: README.md
integrations/splunk-ta/tests/: conftest.py  test_action_base_extra.py  test_adaptive_response.py  test_api_client.py  test_api_validator.py  test_data_transformation.py  test_field_extractions.py  test_modular_inputs.py  test_package_integrity.py  test_splunk_conf_validation.py
java/: README.md  pom.xml
java/examples/: BatchCheck.java
node/: .eslintrc.cjs  .npmignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
node/examples/: error-handling.ts
node/src/: client.ts  constants.ts  crypto.ts  errors.ts  index.ts  types.ts
node/tests/: client.test.ts  crypto.test.ts  errors.test.ts
python/: pyproject.toml
python/src/darkstrata_credential_check/: __init__.py  client.py  crypto.py  errors.py  types.py
python/tests/: test_client.py  test_crypto.py  test_errors.py
rust/: Cargo.toml  README.md
rust/src/: crypto.rs
scripts/: check-appinspect.py  inject-python-required.py  update-versions.js
sdks/csharp/: DarkStrata.CredentialCheck.sln  LICENSE  README.md
sdks/go/: README.md  client.go  client_test.go  constants.go  crypto.go  crypto_test.go  errors_test.go  go.mod  types.go
sdks/java/: README.md
sdks/java/examples/: BasicUsage.java  ErrorHandling.java
sdks/node/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdks/node/examples/: basic-usage.ts  batch-check.ts
sdks/node/src/: client.ts  constants.ts  crypto.ts  index.ts  types.ts
sdks/node/tests/: client.test.ts  crypto.test.ts
sdks/python/: CHANGELOG.md  README.md  pyproject.toml
sdks/python/tests/: test_client.py  test_crypto.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/examples/: basic_usage.rs  batch_check.rs  error_handling.rs
sdks/rust/src/: client.rs  constants.rs  crypto.rs  errors.rs  lib.rs  types.rs
sdks/rust/tests/: integration_tests.rs
splunk-ta/: CHANGELOG.md  README.md  package.json  pyproject.toml
splunk-ta/package/default/: app.conf  savedsearches.conf
splunk-ta/package/default/data/ui/alerts/: darkstrata_reopen_alert.html
splunk-ta/soar/playbooks/: alert_enrichment.py  auto_acknowledge.py  credential_exposure_triage.py
splunk-ta/tests/: __init__.py  conftest.py
(+84 files in other folders)
